# wayland-scroll-factor

./: .gitignore  CHANGELOG.md  README.md  flake.nix  meson.build
.github/: FUNDING.yml  renovate.json5
.github/scripts/: aur-publish.sh
.github/workflows/: aur.yml  ci.yml  copr.yml  packages.yml  release.yml
data/: io.github.danielgrasso.WaylandScrollFactor.desktop.in  io.github.danielgrasso.WaylandScrollFactor.metainfo.xml  meson.build  wayland-scroll-factor-hyprland.desktop.in
data/hyprland/: wsf.lua
docs/: aur.md  copr.md  dependencies.md  design.md  how-it-works.md  hyprland.md  install.md  packaging.md  release-checklist.md  testing.md  troubleshooting.md
gui/: wsf_gui.py
packaging/: README.md
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  wayland-scroll-factor.install
packaging/aur-stable/: .SRCINFO  PKGBUILD  README.md  wayland-scroll-factor.install
packaging/debian/: README.md
packaging/debian/debian/: changelog  control  copyright  rules
packaging/nix/: module.nix  package.nix
packaging/rpm/: README.md  wayland-scroll-factor.spec
scripts/: bootstrap.sh  dev-distrobox.sh  install.sh  test-packages.sh  uninstall.sh
src/: meson.build  wsf_config.c  wsf_preload.c
tools/: meson.build  wsf-hyprland.in  wsf-session-wrapper.in  wsf-start-hyprland.in  wsf.c
